--- a/src/style/style.css
+++ b/src/style/style.css
@@ -32,12 +32,45 @@
     height: 100%;
 }
 
-.header-left, .header-right {
-    margin: 10px 20px;
-}
 
 a {
     cursor: pointer
+}
+
+.main-menu-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.sub-menu-box {
+    padding: 0;
+    background-color: rgba(163, 189, 230, 0.3);
+    margin: 0 10px;
+    width: 33.3333%;
+    border-radius: 10px;
+    
+}
+
+.main-menu-sub-header{
+    border: 1px solid rgba(88, 142, 230, 0.5);
+    margin-bottom: 20px;
+    background-color: rgba(163, 189, 230);
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
+.main-menu-button {
+    width: 100% ;
+    margin-bottom: 20px;
+}
+
+.error-banner {
+    margin-top: 20px;
+    text-align: center;
+    color: white;
+    background-color: darkred;
+    font-size: 20px;
 }
 
 .header {
@@ -47,8 +80,14 @@ a {
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
-    height: 40px;
+    height: 50px;
     z-index: 100;
+}
+
+
+.header-left, .header-right {
+    margin: 10px 20px;
+    font-size: 30px;
 }
 
 .footer {
@@ -57,9 +96,14 @@ a {
     height: 30px;
     left: 0;
     position: fixed; 
-    font-size: small;
+    font-size: 20px;
     width:100%;
     border-top: darkblue solid 1px;
+ }
+
+ .patient-search-info-box {
+     padding: 50px;
+     text-align: center;
  }
 
 
