implemented sessionStorage for auth, got RxImage add medicine set up.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,6 +13,14 @@
     margin-right: 5px;
 }
 
+.margin-top {
+    margin-top: 10px;
+}
+
+.right-margin {
+    margin-right: 5px;
+}
+
 
 .bold-text {
     font-weight: bolder
@@ -22,9 +30,7 @@
     color: red;
 }
 
-.right-margin {
-    margin-right: 5px;
-}
+
 
 .body {
     margin-top: 50px;
